--- a/linux/CMakeLists.txt
+++ b/linux/CMakeLists.txt
@@ -33,6 +33,7 @@ set( EXE_NAME ${PROJECT_NAME} )
 set( SRC_FILES
     ${BACKWARD_ENABLE}
 
+	${SRC_DIR}/palette.cpp
 	${SRC_DIR}/steps.cpp
 
 	${SRC_DIR}/MintApp.cpp
