--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "linux/backward-cpp"]
 	path = linux/backward-cpp
 	url = git@github.com:bombela/backward-cpp.git
+[submodule "include/Jinja2CppLight"]
+	path = include/Jinja2CppLight
+	url = git@github.com:hughperkins/Jinja2CppLight.git
